# pirate-weather.alfredworkflow

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: errors.rs  forecast.rs  geocode.rs  location.rs  main.rs  pirate_weather.rs  theme.rs
workflow/: info.plist
