[package]
name = "pirate-weather"
version = "5.0.0"
authors = ["Alpha Chen <alpha@kejadlen.dev>"]
edition = "2021"

[dependencies]
alphred = "*"
anyhow = "*"
chrono = { version = "*", features = ["serde"] }
color-eyre = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
url = { version = "*", features = ["serde"] }
